# WaveScout

./: .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  design_explorer.py  design_tree.py  make_win.bat  mypy.ini  output.vcd  pylibfst.py  pyproject.toml  requirements.txt  scout.py  search_window.py  setup_env.ps1  setup_vs_env.bat  sinewave_vcd_generator.py  state.json  state_manager.py  sverv_state.json  take_snapshot.py  test_pywellen.py  vcd_generator.py  vcd_parser.py  vcpkg.json  wavescout.py
.claude/: settings.json
.claude/agents/: feature-spec-architect.md
.claude/commands/: new_feature.md
.claude/hooks/: type-check.sh
docs/: plan_new_feature.md
docs/examples/: MockUI.py  NativeFrame.py  snippets_prompt.txt
docs/features/: 0001_analog_rendering_plan.md  0002_data_format_plan.md  0003_analog_aliasing_plan.md  0004_system_theme_plan.md  0005_bus_transitions_plan.md  0006_waveform_hidpi_plan.md  0007_design_tree_view_plan.md  0008_bus_vertical_transitions_fix_plan.md  0009_waveformdb_protocol_plan.md  0010_eliminate_hasattr_plan.md  0011_mypy_strict_plan.md  0012_toolbar_plan.md  0013_markers_plan.md  0014_rename_signals_plan.md  0015_controller_event_bus_plan.md  0016_signal_loading_plan.md  0017_roi_zoom_plan.md  0018_wave_themes.md  0019_libfst_api_plan.md  0020_dual_fst_backend_plan.md  0021-navigate-to-scope.md  0022_value_tooltip_plan.md  0023_signal_color_plan.md  0024-hasattr-refactoring.md  0025_time_grid_refactor_plan.md  0026_clock_signal_plan.md  0027_signal_analysis_plan.md  0028_highlight_selected_plan.md  0029_collapsible_panels_plan.md  0030_hierarchical_name_levels_plan.md  0031_copy_paste_plan.md  0032_jsonc_serialization_plan.md  0033_navigate_time_clock_plan.md  0034_signal_snippets_plan.md  0035_value_format_display_plan.md  0036_auto_snippet_load_plan.md  0037_native_frame_windows_plan.md
libfst/: CLAUDE.md  CMakeLists.txt  build_and_run.ps1  fst_config_stub.h  fstapi.c  setup_env.ps1  test_build.ps1  test_fst_reader.cpp
libfst/test/: vcd_extensions.fst
libfst_rust/: Cargo.toml  debug_segfault.py  test_simple.py  test_types.py
libfst_rust/python/pylibfst/: __init__.py  pylibfst.pyi
libfst_rust/src/: ffi.rs  hierarchy.rs  lib.rs  signal.rs  waveform.rs
libfst_rust/tests/: test_compat.py
pylibfst/: .gitignore  Cargo.toml  build.rs  fst_config_stub.h  pyproject.toml
pylibfst/python/pylibfst/: __init__.py  pylibfst.pyi
pylibfst/src/: ffi.rs  hierarchy.rs  signal.rs  waveform.rs
scripts/: build_pylibfst.py  build_pylibfst_windows.py  build_pywellen.py
test_inputs/: analog_signals_short.fst  apb_sim.vcd  claude_design.py  gpt_design.py  pulse_test.vcd  signal_gen.py  staircase.vcd  vcd_extensions.fst  vcd_extensions.vcd
tests/: __init__.py  conftest.py  test_analog_auto_height.py  test_analysis_copy_results.py  test_analysis_window.py  test_analysis_window_integration.py  test_backend_compat.py  test_benchmark_mode.py  test_canvas_delete_sync.py  test_canvas_height_update.py  test_cli_snippet_loading.py  test_cli_snippet_simple.py  test_clock_signal.py  test_copyable_messages.py  test_data_format.py  test_delete_integration.py  test_design_tree.py  test_design_tree_double_click.py  test_dual_fst_backend.py  test_fst_loading.py  test_libfst.py  test_marker_integration.py  test_multi_selection.py  test_navigate_split_mode.py  test_persistence.py  test_reload_feature.py  test_roi_zoom.py  test_scout_integration.py  test_session_alias_loading.py  test_signals_copy_paste.py  test_snippet_integration.py  test_split_mode_helpers.py  test_themes.py  test_time_grid_renderer.py  test_utils.py  test_value_tooltips.py  test_vcd_aliases.py  test_wave_scout_widget.py  test_waveformdb_protocol.py
wavescout/: __init__.py  analysis_engine.py  backend_types.py  clock_utils.py  config.py  data_model.py  design_tree_model.py  design_tree_view.py  hierarchy_levels_dialog.py  icon_cache.py  markers_window.py  message_box_utils.py  navigate_time_dialog.py  persistence.py  protocols.py  scope_tree_model.py  settings_manager.py  signal_analysis_window.py  signal_names_view.py  signal_renderer.py  signal_sampling.py  snippet_browser_widget.py  snippet_dialogs.py  snippet_manager.py  theme.py  time_grid_renderer.py  vars_view.py  wave_scout_widget.py  waveform_canvas.py  waveform_controller.py  waveform_db.py  waveform_item_model.py  waveform_loader.py
wavescout/application/: __init__.py  event_bus.py  events.py
wavescout/backends/: __init__.py  base.py  pylibfst_backend.py  pywellen_backend.py
