[package]
name = "pylibfst"
version = "0.1.0"
edition = "2021"

[lib]
name = "pylibfst"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
num-bigint = "0.4"
rayon = "1.10"
memoffset = "0.9"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"

[profile.release]
lto = true
opt-level = 3

